--- a/api.yaml
+++ b/api.yaml
@@ -1,4 +1,4 @@
-openapi: '3.0.0'
+openapi: '3.0.1'
 info:
   description: The internal connector API reference for all internal CRM connector peices.
   version: 1.0.0
@@ -42,6 +42,8 @@ paths:
                   $ref: '#/components/schemas/Account'
         400:
           $ref: '#/components/responses/NotAuthenticated'
+        405:
+          $ref: '#/components/responses/MethodNotAllowed'
         500:
           $ref: '#/components/responses/InternalError'
     post:
@@ -59,6 +61,8 @@ paths:
           $ref: '#/components/responses/Account'
         400:
           $ref: '#/components/responses/NotAuthenticated'
+        405:
+          $ref: '#/components/responses/MethodNotAllowed'
         500:
           $ref: '#/components/responses/InternalError'
   /accounts/{accountId}:
@@ -81,6 +85,8 @@ paths:
           $ref: '#/components/responses/NotFound'
         400:
           $ref: '#/components/responses/NotAuthenticated'
+        405:
+          $ref: '#/components/responses/MethodNotAllowed'
         500:
           $ref: '#/components/responses/InternalError'
     patch:
@@ -108,6 +114,8 @@ paths:
           $ref: '#/components/responses/NotFound'
         400:
           $ref: '#/components/responses/NotAuthenticated'
+        405:
+          $ref: '#/components/responses/MethodNotAllowed'
         500:
           $ref: '#/components/responses/InternalError'
     delete:
@@ -129,6 +137,8 @@ paths:
           $ref: '#/components/responses/NotFound'
         400:
           $ref: '#/components/responses/NotAuthenticated'
+        405:
+          $ref: '#/components/responses/MethodNotAllowed'
         500:
           $ref: '#/components/responses/InternalError'
   /leads:
@@ -151,6 +161,8 @@ paths:
                   $ref: '#/components/schemas/Lead'
         400:
           $ref: '#/components/responses/NotAuthenticated'
+        405:
+          $ref: '#/components/responses/MethodNotAllowed'
         500:
           $ref: '#/components/responses/InternalError'
     post:
@@ -168,6 +180,8 @@ paths:
           $ref: '#/components/responses/Lead'
         400:
           $ref: '#/components/responses/NotAuthenticated'
+        405:
+          $ref: '#/components/responses/MethodNotAllowed'
         500:
           $ref: '#/components/responses/InternalError'
   /leads/{leadId}:
@@ -190,6 +204,8 @@ paths:
           $ref: '#/components/responses/NotFound'
         400:
           $ref: '#/components/responses/NotAuthenticated'
+        405:
+          $ref: '#/components/responses/MethodNotAllowed'
         500:
           $ref: '#/components/responses/InternalError'
     patch:
@@ -217,6 +233,8 @@ paths:
           $ref: '#/components/responses/NotFound'
         400:
           $ref: '#/components/responses/NotAuthenticated'
+        405:
+          $ref: '#/components/responses/MethodNotAllowed'
         500:
           $ref: '#/components/responses/InternalError'
     delete:
@@ -238,6 +256,8 @@ paths:
           $ref: '#/components/responses/NotFound'
         400:
           $ref: '#/components/responses/NotAuthenticated'
+        405:
+          $ref: '#/components/responses/MethodNotAllowed'
         500:
           $ref: '#/components/responses/InternalError'
   /cases:
@@ -260,6 +280,8 @@ paths:
                   $ref: '#/components/schemas/Case'
         400:
           $ref: '#/components/responses/NotAuthenticated'
+        405:
+          $ref: '#/components/responses/MethodNotAllowed'
         500:
           $ref: '#/components/responses/InternalError'
     post:
@@ -277,6 +299,8 @@ paths:
           $ref: '#/components/responses/Case'
         400:
           $ref: '#/components/responses/NotAuthenticated'
+        405:
+          $ref: '#/components/responses/MethodNotAllowed'
         500:
           $ref: '#/components/responses/InternalError'
   /cases/{caseId}:
@@ -299,6 +323,8 @@ paths:
           $ref: '#/components/responses/NotFound'
         400:
           $ref: '#/components/responses/NotAuthenticated'
+        405:
+          $ref: '#/components/responses/MethodNotAllowed'
         500:
           $ref: '#/components/responses/InternalError'
     patch:
@@ -326,6 +352,8 @@ paths:
           $ref: '#/components/responses/NotFound'
         400:
           $ref: '#/components/responses/NotAuthenticated'
+        405:
+          $ref: '#/components/responses/MethodNotAllowed'
         500:
           $ref: '#/components/responses/InternalError'
     delete:
@@ -347,6 +375,8 @@ paths:
           $ref: '#/components/responses/NotFound'
         400:
           $ref: '#/components/responses/NotAuthenticated'
+        405:
+          $ref: '#/components/responses/MethodNotAllowed'
         500:
           $ref: '#/components/responses/InternalError'
   /contacts:
@@ -369,6 +399,8 @@ paths:
                   $ref: '#/components/schemas/Contact'
         400:
           $ref: '#/components/responses/NotAuthenticated'
+        405:
+          $ref: '#/components/responses/MethodNotAllowed'
         500:
           $ref: '#/components/responses/InternalError'
     post:
@@ -386,6 +418,8 @@ paths:
           $ref: '#/components/responses/Contact'
         400:
           $ref: '#/components/responses/NotAuthenticated'
+        405:
+          $ref: '#/components/responses/MethodNotAllowed'
         500:
           $ref: '#/components/responses/InternalError'
   /contacts/{contactId}:
@@ -408,6 +442,8 @@ paths:
           $ref: '#/components/responses/NotFound'
         400:
           $ref: '#/components/responses/NotAuthenticated'
+        405:
+          $ref: '#/components/responses/MethodNotAllowed'
         500:
           $ref: '#/components/responses/InternalError'
     patch:
@@ -435,6 +471,8 @@ paths:
           $ref: '#/components/responses/NotFound'
         400:
           $ref: '#/components/responses/NotAuthenticated'
+        405:
+          $ref: '#/components/responses/MethodNotAllowed'
         500:
           $ref: '#/components/responses/InternalError'
     delete:
@@ -456,6 +494,8 @@ paths:
           $ref: '#/components/responses/NotFound'
         400:
           $ref: '#/components/responses/NotAuthenticated'
+        405:
+          $ref: '#/components/responses/MethodNotAllowed'
         500:
           $ref: '#/components/responses/InternalError'
 components:
@@ -769,8 +809,14 @@ components:
           type: string
           description: The fax number associated witht he contact.
     Error:
-      type: string
-      description: The description of the error
+      type: object
+      properties:
+        id:
+          type: string
+          description: The correlation id.
+        error:
+          type: string
+          description: The description of the error
   responses:
     Account:
       description: Success
@@ -800,6 +846,8 @@ components:
       description: Module not found
     NotAuthenticated:
       description: Must be authenticated to perform this action
+    MethodNotAllowed:
+      description: Method is non-existant on crm being used.
     InternalError:
       description: An internal error occured
       content:
